--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "craftcms/ckeditor": "4.10.0",
-    "craftcms/cms": "^5.0.0",
+    "craftcms/ckeditor": "4.10.1",
+    "craftcms/cms": "5.8.17",
     "craftsnippets/craft-image-toolbox": "3.0.1",
     "craftsnippets/static-file-manager": "3.1.1",
     "vaersaagod/seomate": "3.2.0",
